--- a/Suppl_Materials_individual_Exp.tex
+++ b/Suppl_Materials_individual_Exp.tex
@@ -1,38 +1,47 @@
-\PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 %
-\documentclass[english,man]{apa6}
+\documentclass[
+  english,
+  man]{apa6}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
-\usepackage{fixltx2e} % provides \textsubscript
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provides euro and other symbols
-\else % if luatex or xelatex
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
   \usepackage{unicode-math}
-  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
-% use upquote if available, for straight quotes in verbatim environments
+% Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-% use microtype if available
-\IfFileExists{microtype.sty}{%
-\usepackage[]{microtype}
-\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
-\usepackage{hyperref}
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+\usepackage{xcolor}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-            pdftitle={Supplementary Materials for Perpecptual Salience of Positive Self},
-            pdfborder={0 0 0},
-            breaklinks=true}
-\urlstyle{same}  % don't use monospace font for urls
+  pdftitle={Supplementary Materials for Perpecptual Salience of Positive Self},
+  pdflang={en-EN},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
+\urlstyle{same} % disable monospaced font for URLs
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -42,16 +51,23 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\setlength{\emergencystretch}{3em}  % prevent overfull lines
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{0}
-
-% set default figure placement to htbp
+% Set default figure placement to htbp
 \makeatletter
 \def\fps@figure{htbp}
 \makeatother
-
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+% Make \paragraph and \subparagraph free-standing
+\ifx\paragraph\undefined\else
+  \let\oldparagraph\paragraph
+  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+  \let\oldsubparagraph\subparagraph
+  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
 % Manuscript styling
 \usepackage{upgreek}
 \captionsetup{font=singlespacing,justification=justified}
@@ -113,12 +129,12 @@ Correspondence concerning this article should be addressed to Chuan-Peng Hu, Lan
 
 \linenumbers
 \usepackage{csquotes}
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-  \usepackage[shorthands=off,main=english]{babel}
-\else
-  % load polyglossia as late as possible as it *could* call bidi if RTL lang (e.g. Hebrew or Arabic)
+\ifxetex
+  % Load polyglossia as late as possible: uses bidi with RTL langages (e.g. Hebrew, Arabic)
   \usepackage{polyglossia}
   \setmainlanguage[]{english}
+\else
+  \usepackage[shorthands=off,main=english]{babel}
 \fi
 
 \title{Supplementary Materials for Perpecptual Salience of Positive Self}
@@ -128,7 +144,9 @@ Correspondence concerning this article should be addressed to Chuan-Peng Hu, Lan
 \begin{document}
 \maketitle
 
-The Bayes factor is the ratio of the probability of the current data pattern under alternative hypothesis (H\_1) and the probability of the current data pattern under null hypothesis (H\_0), which index the relative evidence for these two hypotheses from the current data. The BF\_10 represents the evidence for alternative hypothesis (H\_1) vs.~evidence for null hypothesis (H\_0); in contrast, BF\_01 represents that evidence for null hypothesis over the evidence for althernative hypothesis. We used the default prior in JASP for all the Bayes Factor analyses, and used Jeffreys (1961)'s convention for the strength of evidence: the BF\_10 \textgreater{} 3 means there are some evidence for H\_1 as compared with H\_0, BF\_10 great or equal to 10 means strong evidence for H\_1.
+We will use both Frequentist and Bayesian generalized linear mixed model (GLMM) to estimate the effect of moral valence and self-referential.
+
+The Bayes factor is the ratio of the probability of the current data pattern under alternative hypothesis (\(H_1\)) and the probability of the current data pattern under null hypothesis (H\_0), which index the relative evidence for these two hypotheses from the current data. The \(BF_10\) represents the evidence for alternative hypothesis (H\_1) vs.~evidence for null hypothesis (\(H_0\)); in contrast, \(BF_01\) represents that evidence for null hypothesis over the evidence for althernative hypothesis. We used the default prior in JASP for all the Bayes Factor analyses, and used Jeffreys (1961)'s convention for the strength of evidence: the \(BF_10\) \textgreater{} 3 means there are some evidence for \(H_1\) as compared with \(H_0\), \(BF_10\) great or equal to 10 means strong evidence for \(H_1\).
 
 \hypertarget{experiment-1a}{%
 \section{Experiment 1a}\label{experiment-1a}}
@@ -253,7 +271,7 @@ In this study, we further control the valence of words using in our experiment. 
 \subsubsection{Stimuli and Tasks}\label{stimuli-and-tasks-2}}
 
 Three geometric shapes (triangle, square, and circle, with 3.7º × 3.7º of visual angle) were presented above a white fixation cross subtending 0.8º × 0.8º of visual angle at the center of the screen. The three most common names were chosen, which are neutral in moral valence before the manipulation.
-Three names (Zhang, Wang, Li) were first paired with three paragraphs of behavioral description. Each description includes one sentence of biographic infomration and four sentences that describing the moral behavioral under that name. To assess the that these three descriptions represented good, neutral, and bad valence, we collected the ratings of three person on six dimensions: morality, likability, trustworthiness, dominance, competence, and aggressiviess, from an independent sample (n = 34, 18 female, age = 19.6 ± 2.05). The rating results showed that the person with morally good behavioral description has higher score on morality (M = 3.59, SD = 0.66) than neutral (M = 0.88, SD = 1.1), \emph{t}(33) = 12.94, \emph{p} \textless{} .001, and bad conditions (M = -3.4, SD = 1.1), \emph{t}(33) = 30.78, \emph{p} \textless{} .001. Neutral condition was also significant higher than bad conditions \emph{t}(33) = 13.9, \emph{p} \textless{} .001 (See supplementary materials).
+Three names (Zhang, Wang, Li) were first paired with three paragraphs of behavioral description. Each description includes one sentence of biographic infomration and four sentences that describing the moral behavioral under that name. To assess the that these three descriptions represented good, neutral, and bad valence, we collected the ratings of three person on six dimensions: morality, likability, trustworthiness, dominance, competence, and aggressiviess, from an independent sample (n = 34, 18 female, age = 19.6 ± 2.05). The rating results showed that the person with morally good behavioral description has higher score on morality (M = 3.59, SD = 0.66) than neutral (M = 0.88, SD = 1.1), \emph{t}(33) = 12.94, \emph{p} \textless{} .001, and bad conditions (M = -3.4, SD = 1.1), \emph{t}(33) = 30.78, \emph{p} \textless{} .001. Neutral condition was also significant higher than bad conditions \(t(33) = 13.9\), \(p < .001\) (See supplementary materials).
 
 \hypertarget{procedure-2}{%
 \subsubsection{Procedure}\label{procedure-2}}
@@ -441,14 +459,14 @@ Figure \ref{fig:ex3b-dprime-rt} shows \emph{d} prime and reaction times of exper
 \hypertarget{d-prime-3}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
 
-There was evidence for the main effect of valence, \(F(1.87, 103.09) = 5.29\), \(\mathit{MSE} = 0.27\), \(p = .008\), \(\hat{\eta}^2_G = .011\), and main effect of self-relevance, \(F(1, 55) = 5.07\), \(\mathit{MSE} = 0.88\), \(p = .028\), \(\hat{\eta}^2_G = .019\), as well as the intercation, \(F(1.82, 100.14) = 16.18\), \(\mathit{MSE} = 0.27\), \(p < .001\), \(\hat{\eta}^2_G = .033\). Therefore we conducted repeated measure ANOVA for self and other conditions separately. We found the valence effect for self-referential condition (\(F(1.87, 102.94) = 18.32\), \(\mathit{MSE} = 0.26\), \(p < .001\), \(\hat{\eta}^2_G = .090\)) and other-referential condition (\(F(1.83, 100.49) = 3.26\), \(\mathit{MSE} = 0.28\), \(p = .047\), \(\hat{\eta}^2_G = .011\)). Post-hoc comparison for the self-referential conditions revealed that \emph{d}' was larger for good self (2.23 \(\pm\) 0.1087) than for bad self (1.66 \(\pm\) 0.098), \emph{t}(55) = 6.11, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = 0.817, 95\% CI {[}0.511 1.117{]} , BF10 = 8.43, and neutral self (1.91 \(\pm\) 0.088), \emph{t}(55) = 3.03, \emph{p} = 0.0104, Cohen's \emph{d} = 0.404, 95\%CI {[}0.13 0.675{]} , BF10 = 1.33e+5. There was also higher d' for neutral-self condition than bad-self conditions, \emph{t}(55) = 3.02, \emph{p} = 0.0106, Cohen's \emph{d} = 0.403, 95\% CI {[}0.129 0.674{]}, BF10 = 8.22. For other-referential conditions, good-other (2.03 \(\pm\) 0.12) was smaller than neutral-other (2.28 \(\pm\) 0.133), \emph{t}(55) = -2.262, \emph{p} = 0.0699, but not the bad-other condition (2.19 \(\pm\) 0.122), \emph{t}(55) = -1.559, \emph{p} = 0.272. Neither evidence for the neutral and bad-other condition \emph{t}(55) = 1.11, \emph{p} = 0.51.
+There was evidence for the main effect of valence, \(F(1.92, 105.43) = 1.90\), \(\mathit{MSE} = 0.33\), \(p = .157\), \(\hat{\eta}^2_G = .005\), and main effect of self-relevance, \(F(1, 55) = 4.65\), \(\mathit{MSE} = 0.89\), \(p = .035\), \(\hat{\eta}^2_G = .017\), as well as the intercation, \(F(1.90, 104.36) = 5.58\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .011\). Therefore we conducted repeated measure ANOVA for self and other conditions separately. We found the valence effect for self-referential condition (\(F(1.75, 96.42) = 6.73\), \(\mathit{MSE} = 0.30\), \(p = .003\), \(\hat{\eta}^2_G = .037\)) and other-referential condition (\(F(1.93, 105.97) = 0.61\), \(\mathit{MSE} = 0.31\), \(p = .539\), \(\hat{\eta}^2_G = .002\)). Post-hoc comparison for the self-referential conditions revealed that \emph{d}' was larger for good self (2.23 \(\pm\) 0.1087) than for bad self (1.66 \(\pm\) 0.098), \emph{t}(55) = 6.11, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = 0.817, 95\% CI {[}0.511 1.117{]} , BF10 = 8.43, and neutral self (1.91 \(\pm\) 0.088), \emph{t}(55) = 3.03, \emph{p} = 0.0104, Cohen's \emph{d} = 0.404, 95\%CI {[}0.13 0.675{]} , BF10 = 1.33e+5. There was also higher d' for neutral-self condition than bad-self conditions, \emph{t}(55) = 3.02, \emph{p} = 0.0106, Cohen's \emph{d} = 0.403, 95\% CI {[}0.129 0.674{]}, BF10 = 8.22. For other-referential conditions, good-other (2.03 \(\pm\) 0.12) was smaller than neutral-other (2.28 \(\pm\) 0.133), \emph{t}(55) = -2.262, \emph{p} = 0.0699, but not the bad-other condition (2.19 \(\pm\) 0.122), \emph{t}(55) = -1.559, \emph{p} = 0.272. Neither evidence for the neutral and bad-other condition \emph{t}(55) = 1.11, \emph{p} = 0.51.
 
 We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-other association condition, \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-other, \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
 
 \hypertarget{reaction-time-4}{%
 \subsubsection{Reaction time}\label{reaction-time-4}}
 
-The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data. We found three-way intercation between matchness, and valence (\(F(1.99, 109.63) = 55.67\), \(\mathit{MSE} = 4,203.96\), \(p < .001\), \(\hat{\eta}^2_G = .032\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data. We found three-way intercation between matchness, and valence (\(F(1.86, 102.47) = 15.44\), \(\mathit{MSE} = 3,112.78\), \(p < .001\), \(\hat{\eta}^2_G = .006\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
 
 For the matched trials, we found that interaction between of valence and identity, \(F(1.67, 92.11) = 6.14\), \(\mathit{MSE} = 6,472.48\), \(p = .005\), \(\hat{\eta}^2_G = .009\), BF10 = 1.17. Then, the matched trials were analyzed for the self-relevance and other-relevance pairs separately. The results showed a significant effect of moral valence for the self condition, \(F(1.66, 91.38) = 23.98\), \(\mathit{MSE} = 6,965.61\), \(p < .001\), \(\hat{\eta}^2_G = .100\), BF10 = 4.54e+6. Paired \emph{t}-tests showed that responses to the good-self association (817 ± 119) were faster than to bad-self associations (915 ± 132), \emph{t}(55) = -8.78, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -1.173, 95\% CI {[}-1.511 -0.828{]}, BF10 = 1.84e+9, and to neutral-self association (880 ± 116), \emph{t}(55) = 3.748, \emph{p} \textless{} 0.0001, Cohen's \emph{d} = -0.501, 95\% CI {[}-0.777 -0.221{]}, BF10 = 58.7. The neutral-self was faster than the bad-self associations, \emph{t}(55) = -2.41, \emph{p} = 0.019 , Cohen's \emph{d} = -0.321, 95\% CI {[}-0.589 -0.051{]}, BF10 = 2.03.
 
@@ -456,7 +474,7 @@ The effect of moral valence was also significant for the other-relevance conditi
 
 We also analyzed the effect of self-relevance on the different moral valence levels. The results showed that for all three different valence levels, there the self condition was responded slower than other condition: good-self vs.~good-stranger, \emph{t}(55) = 4.29, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.573, 95\% CI {[}0.288 0.854{]}, BF10 = 297.2; neutral-self vs.~neutral -stranger, \emph{t}(55) = 7.17, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.958, 95\% CI {[}0.638 1.272{]}), BF10 = 5.77e+6; bad-self vs.~bad-other, \emph{t}(55) = 6.03, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.806, 95\% CI {[}0.5 1.11{]}, BF10 = 100208.03.
 
-For the mismacthed trials, we also found interaction between of valence and identity, \(F(1.84, 100.94) = 35.20\), \(\mathit{MSE} = 2,879.80\), \(p < .001\), \(\hat{\eta}^2_G = .026\). Further analysis showed that there was effect of valence for other-referential trials (\(F(1.79, 98.63) = 62.42\), \(\mathit{MSE} = 3,489.92\), \(p < .001\), \(\hat{\eta}^2_G = .077\)) but not for the self-referential trials (\(F(1.84, 101.38) = 0.66\), \(\mathit{MSE} = 2,283.19\), \(p = .508\), \(\hat{\eta}^2_G = .001\)). Post-hoc comparison revealed that bad-other trials (857 \(\pm\) 20.9) were responded faster than good (967 \(\pm\) 25.1), \emph{t} = -9.625, \emph{p} \textless{} 0.0001, and neutral (876 \(\pm\) 21.4) trials, \emph{t} = -2.263, \emph{p} = 0.697, good-other conditions were also slower than neutral-other, \emph{t} = -8.016, \emph{p} \textless{} 0.0001
+For the mismacthed trials, we also found interaction between of valence and identity, \(F(1.93, 106.25) = 35.51\), \(\mathit{MSE} = 1,939.88\), \(p < .001\), \(\hat{\eta}^2_G = .019\). Further analysis showed that there was effect of valence for other-referential trials (\(F(1.95, 107.38) = 36.43\), \(\mathit{MSE} = 3,487.65\), \(p < .001\), \(\hat{\eta}^2_G = .051\)) but not for the self-referential trials (\(F(1.98, 108.81) = 0.27\), \(\mathit{MSE} = 1,295.05\), \(p = .760\), \(\hat{\eta}^2_G = .000\)). Post-hoc comparison revealed that bad-other trials (857 \(\pm\) 20.9) were responded faster than good (967 \(\pm\) 25.1), \emph{t} = -9.625, \emph{p} \textless{} 0.0001, and neutral (876 \(\pm\) 21.4) trials, \emph{t} = -2.263, \emph{p} = 0.697, good-other conditions were also slower than neutral-other, \emph{t} = -8.016, \emph{p} \textless{} 0.0001
 
 \hypertarget{discussion-3}{%
 \subsection{Discussion}\label{discussion-3}}
@@ -665,7 +683,7 @@ Experiment 6a was conducted to study the neural correlates of the positive prior
 \hypertarget{participants-9}{%
 \subsubsection{Participants}\label{participants-9}}
 
-25 college students (8 female, age = 22.72 \(\pm\) 2.84) participated the current study, all of them were from Tsinghua Universtiy in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
+24 college students (8 female, age = 22.88 \(\pm\) 2.79) participated the current study, all of them were from Tsinghua Universtiy in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
 
 \hypertarget{experimental-design-3}{%
 \subsubsection{Experimental design}\label{experimental-design-3}}
@@ -701,14 +719,14 @@ Only the behavioral results were reported here. Figure \ref{fig:ex6a-dprime-rt} 
 \hypertarget{d-prime-6}{%
 \subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-6}}
 
-We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
+We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.74, 40.05) = 3.76\), \(\mathit{MSE} = 0.10\), \(p = .037\), \(\hat{\eta}^2_G = .021\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
 
 \hypertarget{analaysis-of-reaction-time.}{%
 \subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
-We found intercation between Matchness and Valence (\(F(1.96, 47.14) = 21.88\), \(\mathit{MSE} = 434.43\), \(p < .001\), \(\hat{\eta}^2_G = .021\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 2. For matched trials, we found the effect of valence \(F(1.98, 47.44) = 34.68\), \(\mathit{MSE} = 511.80\), \(p < .001\), \(\hat{\eta}^2_G = .080\). For non-matched trials, there was no significant effect of Valence (\(F(1.78, 42.78) = 0.42\), \(\mathit{MSE} = 234.71\), \(p = .638\), \(\hat{\eta}^2_G = .000\)). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (mean = 550, SE = 13.8) were responded faster than Neutral-Person (501, SE = 14.7), (\emph{t}(24) = -5.171, \emph{p} = 0.0001) and Bad Person (523, SE = 16.3), \emph{t}(24) = -8.137, \emph{p} \textless{} 0.0001)., and Neutral is faster than Bad-Person condition (\emph{t}(32) = -3.282, \emph{p} = 0.0085).
+We found intercation between Matchness and Valence (\(F(1.97, 45.20) = 20.45\), \(\mathit{MSE} = 450.47\), \(p < .001\), \(\hat{\eta}^2_G = .021\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 2. For matched trials, we found the effect of valence \(F(1.97, 45.25) = 32.37\), \(\mathit{MSE} = 522.42\), \(p < .001\), \(\hat{\eta}^2_G = .078\). For non-matched trials, there was no significant effect of Valence (\(F(1.77, 40.67) = 0.35\), \(\mathit{MSE} = 242.15\), \(p = .679\), \(\hat{\eta}^2_G = .000\)). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (mean = 550, SE = 13.8) were responded faster than Neutral-Person (501, SE = 14.7), (\emph{t}(24) = -5.171, \emph{p} = 0.0001) and Bad Person (523, SE = 16.3), \emph{t}(24) = -8.137, \emph{p} \textless{} 0.0001)., and Neutral is faster than Bad-Person condition (\emph{t}(32) = -3.282, \emph{p} = 0.0085).
 
 \hypertarget{experiment-6b-eeg-study-2}{%
 \section{Experiment 6b: EEG study 2}\label{experiment-6b-eeg-study-2}}
