--- a/endnote.bib
+++ b/endnote.bib
@@ -135,9 +135,12 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    author = {Hu, Chuan-Peng and Lan, Yuxuan and Macrae, C. Neil and Sui, Jie},
    title = {Good Me Bad Me: Does Valence Influence Self-Prioritization During Perceptual Decision-Making?},
    journal = {Collabra: Psychology},
-   DOI = {10.31234/osf.io/9fczh},
-   url = {https://psyarxiv.com/9fczh},
-   year = {2019},
+   volume = {6},
+   number = {1},
+   pages = {20},
+   DOI = {10.1525/collabra.301},
+   url = {https://www.collabra.org/articles/10.1525/collabra.301/},
+   year = {2020},
    type = {Journal Article}
 }
 
@@ -254,13 +257,66 @@ http://dx.doi.org/10.18637/jss.v080.i01},
    type = {Journal Article}
 }
 
-﻿@misc{Rousselet_2019,
+﻿@article{Rousselet_2019,
    author = {Rousselet, Guillaume A and Wilcox, Rand R},
    title = {Reaction times and other skewed distributions: problems with the mean and the median},
-   DOI= {10.1101/383935},
+   journal = {Meta-Psychology},
+   DOI = {10.1101/383935},
    url = {https://www.biorxiv.org/content/10.1101/383935v3},
    year = {2019},
    type = {preprint}
 }
 
+﻿@article{Krueger_1978,
+   author = {Krueger, L. E.},
+   title = {A theory of perceptual matching},
+   journal = {Psychological Review},
+   volume = {85},
+   number = {4},
+   DOI = {10.1037/0033-295X.85.4.278},
+   year = {1978},
+   pages = {278–304},
+   type = {Journal Article}
+}
 
+﻿@article{Farell_1985,
+   author = {Farell, Bart},
+   title = {"Same"–"different" judgments: A review of current controversies in perceptual comparisons},
+   journal = {Psychological Bulletin},
+   volume = {98},
+   number = {3},
+   DOI = {10.1037/0033-2909.98.3.419},
+   year = {1985},
+   pages = {419-456},
+   type = {Journal Article}
+}
+
+﻿@article{Spruyt_de_Houwer_2017,
+   author = {Adriaan Spruyt and Jan De Houwer},
+   title = {On the Automaticity of Relational Stimulus Processing: The (Extrinsic) Relational Simon Task},
+   journal = {PLoS One},
+   volume = {12},
+   number = {10},
+   DOI = {10.1371/journal.pone.0186606},
+   year = {2017},
+   pages = {e0186606},
+   type = {Journal Article}
+}
+
+@article{van_zandt_comparison_2000,
+	title = {A comparison of two response time models applied to perceptual matching},
+	volume = {7},
+	issn = {1531-5320},
+	url = {https://doi.org/10.3758/BF03212980},
+	doi = {10.3758/BF03212980},
+	abstract = {Two models, a Poisson race model and a diffusion model, are fit to data from a perceptual matching task. In each model, information about the similarity or the difference between two stimuli accumulates toward thresholds for either response. Stimulus variables are assumed to influence the rate at which information accumulates, and response variables are assumed to influence the level of the response thresholds. Three experiments were conducted to assess the performance of each model. In Experiment 1, observers performed under different response deadlines; in Experiment 2, response bias was manipulated by changing the relative frequency ofsame anddifferent stimuli. In Experiment 3, stimulus pairs were presented at three eccentricities: foveal, parafoveal, and peripheral. We examined whether the race and diffusion models could fit the response time and accuracy data through changes only in response parameters (for Experiments 1 and 2) or stimulus parameters (for Experiment 3). Comparisons between the two models suggest that the race model, which has not been studied extensively, can account for perceptual matching data at least as well as the diffusion model. Furthermore, without the constraints on the parameters provided by the experimental conditions, the diffusion and the race models are indistinguishable. This finding emphasizes the importance of fitting models across several conditions and imposing logical psychological constraints on the parameters of models.},
+	pages = {208--256},
+	number = {2},
+	journaltitle = {Psychonomic Bulletin \& Review},
+	shortjournal = {Psychonomic Bulletin \& Review},
+	author = {Van Zandt, Trisha and Colonius, Hans and Proctor, Robert W.},
+	urldate = {2020-06-07},
+	date = {2000-06-01},
+	langid = {english},
+	file = {Springer Full Text PDF:files/4872/Van Zandt et al. - 2000 - A comparison of two response time models applied t.pdf:application/pdf}
+}
